Added repository for reading quotes from json file, removed context from view models. Changed structure and background of previous and next action buttons.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,4 +9,6 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <item name="card.background" type="drawable">@drawable/quote_background_night</item>
+    <item name="image.tint" type="color">@color/white</item>
 </resources>
