--- a/app/src/main/res/drawable/quote_background_night.xml
+++ b/app/src/main/res/drawable/quote_background_night.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:right="2dp" android:left="2dp" android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#CCCCCC"/>
+            <solid android:color="#333333"/>
             <corners android:radius="24dp"/>
         </shape>
     </item>
