--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dailywisdom.MainActivity"
+    tools:context=".MainActivity"
     android:background="@drawable/app_background">
 
     <TextView
@@ -16,6 +16,7 @@
         android:layout_marginTop="50dp"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:textColor="@color/colorOnPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -25,9 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:background="@drawable/quote_background"
+        android:background="@drawable/card.background"
         android:paddingBottom="36dp"
-        app:layout_constraintBottom_toTopOf="@id/action_tv_ll"
+        app:layout_constraintBottom_toTopOf="@id/previous_cl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_name_tv"
@@ -37,10 +38,12 @@
             android:id="@+id/quotes_imv"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:src="@drawable/quotes_ic"
+            android:scaleX="-1"
+            app:tint="@color/image.tint"
+            android:contentDescription="@string/quotes"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="12dp"
-            android:scaleX="-1"
-            android:src="@drawable/quotes_ic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,39 +73,62 @@
         android:id="@+id/share_fb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="share"
+        android:contentDescription="@string/share"
         android:src="@drawable/share_ic"
         android:layout_marginHorizontal="22dp"
         app:layout_constraintTop_toBottomOf="@id/quote_container"
         app:layout_constraintEnd_toEndOf="@id/quote_container"
         app:layout_constraintBottom_toBottomOf="@id/quote_container"
         />
-
-    <LinearLayout
-        android:id="@+id/action_tv_ll"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/previous_cl"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:orientation="horizontal"
+        android:background="@drawable/secondary_buttons_background"
+        android:padding="6dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/previous_imv"
-        app:layout_constraintEnd_toStartOf="@id/next_imv"
-        android:layout_marginHorizontal="4dp"
+        app:layout_constraintStart_toStartOf="parent"
         >
+
         <TextView
             android:id="@+id/previous_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/previous"
-            android:textSize="18sp"
-            android:textStyle="bold"
             android:textAlignment="textStart"
             android:textColor="@color/colorOnSecondary"
-            />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/previous_imv"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:contentDescription="@string/previous_action_icon"
+            android:scaleType="centerInside"
+            android:scaleX="-1"
+            android:src="@drawable/right_arrow_ic"
+            app:layout_constraintBottom_toBottomOf="@id/previous_tv"
+            app:layout_constraintEnd_toStartOf="@id/previous_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/previous_tv" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/next_cl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/secondary_buttons_background"
+        android:padding="6dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
         <TextView
             android:id="@+id/next_tv"
             android:layout_width="wrap_content"
@@ -111,33 +137,22 @@
             android:textColor="@color/colorOnSecondary"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textAlignment="textEnd"/>
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/previous_imv"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="22dp"
-        android:src="@drawable/left_arrow_ic"
-        app:layout_constraintBottom_toBottomOf="@id/action_tv_ll"
-        app:layout_constraintEnd_toStartOf="@id/action_tv_ll"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/action_tv_ll"
-        android:scaleType="centerInside"
-        />
-
-    <ImageView
-        android:id="@+id/next_imv"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginRight="22dp"
-        android:src="@drawable/right_arrow_ic"
-        app:layout_constraintTop_toTopOf="@id/action_tv_ll"
-        app:layout_constraintBottom_toBottomOf="@id/action_tv_ll"
-        app:layout_constraintStart_toEndOf="@id/action_tv_ll"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="centerInside"
-        />
+            android:textAlignment="textEnd"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+        <ImageView
+            android:id="@+id/next_imv"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:src="@drawable/right_arrow_ic"
+            android:contentDescription="@string/next_action_icon"
+            app:layout_constraintTop_toTopOf="@id/next_tv"
+            app:layout_constraintBottom_toBottomOf="@id/next_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/next_tv"
+            android:scaleType="centerInside"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
