--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <!-- Primary brand colors -->
-    <color name="colorPrimary">#BB86FC</color>
+    <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryVariant">#3700B3</color>
-    <color name="colorOnPrimary">#000000</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
 
     <!-- Secondary color -->
     <color name="colorSecondary">#03DAC6</color>
-    <color name="colorSecondaryVariant">#03DAC6</color>
-    <color name="colorOnSecondary">#000000</color>
+    <color name="colorSecondaryVariant">#018786</color>
+    <color name="colorOnSecondary">#DDDDDD</color>
 
     <!-- Background and surface -->
-    <color name="colorBackground">#121212</color>
-    <color name="colorOnBackground">#FFFFFF</color>
-    <color name="colorSurface">#121212</color>
-    <color name="colorOnSurface">#000000</color>
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorOnBackground">#BBBBBB</color>
+    <color name="colorSurface">#FFFFFF</color>
+    <color name="colorOnSurface">#CCCCCC</color>
 
     <!-- Error -->
-    <color name="colorError">#CF6679</color>
-    <color name="colorOnError">#000000</color>
+    <color name="colorError">#B00020</color>
+    <color name="colorOnError">#FFFFFF</color>
 </resources>
